force-app/main/default/objects/Player__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>