force-app/main/default/objects/Player__c/fields/Profile_Icon_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_Icon_ID__c</fullName>
    <label>Profile Icon ID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>