force-app/main/default/objects/Player__c/fields/Summoner_ID__c.field-meta.xml
<CustomField>
    <fullName>Summoner_ID__c</fullName>
    <label>Summoner ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>